# birl

./: CMakeLists.txt  LICENSE  README.md
program_options/: CMakeLists.txt  inf1.cfg  inf2.cfg  main.cpp  options.cpp  options.hpp
python_embedded/: CMakeLists.txt  jsontest.cpp  jsontest.py
